--- a/Hello World!/en.lproj/MainStoryboard.storyboard
+++ b/Hello World!/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,121 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C2034" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="DZR-Dh-7Ud">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller - Hello Screen-->
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Hello, Chaz" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bt3-JM-fZm">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v0l-00-jO3">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Say Goodbye">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="VeD-Ix-A5v" kind="push" id="oSS-4P-fue"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="P0c-yl-pc8">
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                            </segmentedControl>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="WdW-hn-ge3">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="154" type="user" id="Sze-cV-p20"/>
+                                </constraints>
+                            </slider>
+                            <stepper opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="XjJ-RP-D21"/>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="P0c-yl-pc8" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="118" id="Aq4-Ml-Xfl"/>
+                            <constraint firstItem="WdW-hn-ge3" firstAttribute="centerX" secondItem="bt3-JM-fZm" secondAttribute="centerX" type="default" id="L4o-eb-Gon"/>
+                            <constraint firstItem="bt3-JM-fZm" firstAttribute="top" secondItem="5" secondAttribute="top" constant="20" symbolic="YES" type="default" id="NXC-FI-Yrl"/>
+                            <constraint firstItem="WdW-hn-ge3" firstAttribute="top" secondItem="5" secondAttribute="top" constant="385" id="SnE-sb-oAP"/>
+                            <constraint firstItem="v0l-00-jO3" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="123" id="a0m-jd-4M4"/>
+                            <constraint firstItem="XjJ-RP-D21" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="268" id="lAH-fX-Mri"/>
+                            <constraint firstItem="WdW-hn-ge3" firstAttribute="centerX" secondItem="5" secondAttribute="centerX" type="default" id="mA5-N9-iDf"/>
+                            <constraint firstItem="XjJ-RP-D21" firstAttribute="top" secondItem="5" secondAttribute="top" constant="488" id="pJL-2j-umG"/>
+                            <constraint firstItem="v0l-00-jO3" firstAttribute="top" secondItem="5" secondAttribute="top" constant="155" id="tnv-YW-mZ9"/>
+                            <constraint firstItem="P0c-yl-pc8" firstAttribute="top" secondItem="5" secondAttribute="top" constant="269" id="zdz-Kt-w5T"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Hello Screen" id="TK0-gn-t99"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="490" y="-446"/>
+        </scene>
+        <!--View Controller - Goodbye Screen-->
+        <scene sceneID="baB-SE-eag">
+            <objects>
+                <viewController id="VeD-Ix-A5v" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qzr-wB-zwP">
+                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Goodbye, Chaz" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fam-Ad-7Ii">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.21098055674915717" green="0.48109583226696639" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="fam-Ad-7Ii" firstAttribute="centerX" secondItem="Qzr-wB-zwP" secondAttribute="centerX" type="default" id="c6j-BS-OH3"/>
+                            <constraint firstItem="fam-Ad-7Ii" firstAttribute="top" secondItem="Qzr-wB-zwP" secondAttribute="top" constant="132" id="n3x-tA-sEA"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Goodbye Screen" id="KCF-OI-y4V"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sfs-Yy-Uul" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1319" y="-446"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jVb-Bg-aLe">
+            <objects>
+                <navigationController id="DZR-Dh-7Ud" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5mC-ZN-A5S">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="cVE-Sc-IvP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h0f-FC-Ogb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-484" y="-446"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
